--- a/erh-theme/assets/css/_variables.css
+++ b/erh-theme/assets/css/_variables.css
@@ -170,6 +170,6 @@
     --z-mobile-menu: 1010;
     --z-modal-backdrop: 1020;
     --z-modal: 1021;
-    --z-search-dropdown: 1002;
+    --z-search-dropdown: 1011;
     --z-skip-link: 10000;
 }
